--- a/index.html
+++ b/index.html
@@ -4,118 +4,42 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Plotting a Graph</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.0/chart.min.js" integrity="sha512-asxKqQghC1oBShyhiBwA+YgotaSYKxGP1rcSYTDrB0U6DxwlJjU59B67U8+5/++uFjcuVM8Hh5cokLjZlhm3Vg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <style>
-            body{
-                background: #333;
-                color: #eeeeee;
-                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                padding-left: 20px;
-                text-align: center;
-            }
-            textarea{
-                border-radius: 5px;
-                background: #444;
-                border: 2px solid #222;
-                outline: none;
-                color: #eee;
-                transition: .2s ease;
-            }
-            textarea:focus{
-                border: 2px solid #7670e6;
-            }
 
-            input[type='button']{
-                background: #7670e6;
-                color: #eee;
-                border: 2px solid #5853ac;
-                font-size: 24px;
-                padding: 15px 40px;
-                border-radius: 125px;
-                transition: .2s ease;
-                cursor: pointer;
-            }
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>It's ya boi Bentzy</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        html,
+        body,
+        .bady {
+            background: #333;
+            color: #eee;
+            font-size: 56px;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            text-align: center;
+            display: flex;
+            justify-items: center;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+            flex-direction: column;
+            height: 100%;
+        }
+    </style>
+</head>
 
-            input[type='button']:hover{
-                background: #8884dc;
-            }
-
-            .hidden{
-                display: none;
-            }
-        </style>
-    </head>
-    <body>
-        <!--[if lt IE 7]>
+<body>
+    <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1>Its ya boi Bentzy</h1>
-        <div id='form1'>
-            Raw paste: <br> <br>
-            <textarea rows=20 cols=30></textarea>
-            <br><br>
-            <input onclick="initiate()" type="button" value='Send'>
-        </div>
+    <div class='bady'>
+        <div style='font-size: 36px; opacity: .8;'>"Yep I really own this domain"</div>
+        <div>Its ya boi Bentzy <br> (RL: Malkidai) <br> Discord: Bentzy#5555</div>
+    </div>
+    <script src="" async defer></script>
+</body>
 
-        <div style='max-height: 250px;'>
-            <canvas id="myChart" width="400" height="200"></canvas>
-        </div>
-
-        <script>
-            function initiate(){
-                let parsed_data = getParsedData()
-                let dates = []
-                let values = []
-                parsed_data.forEach((row) => {
-                    dates.push(row[1])
-                    values.push(row[0])
-                })
-
-                hideForm()
-                populateChart(dates, values)
-            }
-
-            function getParsedData(){
-                let raw = document.querySelector('textarea').value
-                let raw_splitted=raw.split('\n').reverse()
-                let parsed = []
-                raw_splitted.forEach((r) => {
-                    parsed.push(r.replace('[', '').replace(']', '').split(' ').filter((e) => {return e != ''}))
-                })
-                parsed = parsed.filter((e) => {return e.length != 0})
-                return parsed
-            }
-
-            function hideForm(){
-                document.getElementById('form1').classList.add('hidden')
-            }
-
-            function populateChart(dates, values){
-                var ctx = document.getElementById('myChart').getContext('2d');
-                var myChart = new Chart(ctx, {
-                    type: 'line',
-                    data: {
-                        labels: dates,
-                        datasets: [{
-                            label: 'Weight',
-                            data: values,
-                            backgroundColor: [
-                                '#7670e6',
-                            ],
-                            borderColor: [
-                                '#7670e6',
-                            ],
-                            borderWidth: 1
-                        }]
-                    }
-                });
-            }
-        </script>
-    </body>
 </html>
