--- a/index.html
+++ b/index.html
@@ -4,42 +4,67 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>It's ya boi Bentzy</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        html,
-        body,
-        .bady {
-            background: #333;
-            color: #eee;
-            font-size: 56px;
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>It's ya boi Bentzy</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+            article {
+            background: linear-gradient(
+                to right, 
+                hsl(98 100% 62%), 
+                hsl(204 100% 59%)
+            );
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
             text-align: center;
-            display: flex;
-            justify-items: center;
-            justify-content: center;
-            align-items: center;
-            align-content: center;
-            flex-direction: column;
-            height: 100%;
-        }
-    </style>
-</head>
+            }
 
-<body>
-    <!--[if lt IE 7]>
+            h1 {
+            font-size: 10vmin;
+            line-height: 1.1;
+            }
+
+            body {
+            background: hsl(204 100% 5%);
+            
+            min-block-size: 100%;
+            min-inline-size: 100%;
+            box-sizing: border-box;
+            display: grid;
+            place-content: center;
+            font-family: system-ui;
+            font-size: min(200%, 5vmin);
+            }
+
+            h1, p, body {
+            margin: 0;
+            }
+
+            p {
+            font-family: "Dank Mono", ui-monospace, monospace;
+            }
+
+            html {
+            block-size: 100%;
+            inline-size: 100%;
+            }
+        </style>
+    </head>
+    <body dir='rtl'>
+        <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <div class='bady'>
-        <div style='font-size: 36px; opacity: .8;'>"Yep I really own this domain"</div>
-        <div>Its ya boi Bentzy <br> (RL: Malkidai) <br> Discord: Bentzy#5555</div>
-    </div>
-    <script src="" async defer></script>
-</body>
-
+        
+        <article>
+            <h1 style='font-weight: 200; margin-bottom: 10px;'>Yep, I really own this domain boi</h1>
+            <p> Hit me up on discord: Bentzy#5555
+                <br>
+                (RL: Malkidai)
+            </p>
+        </article>
+        <script src="" async defer></script>
+    </body>
 </html>
